# aoc-hs

./: aoc.cabal  aoc2021hs.cabal
2021/src/: Day03.hs  Day06.hs  Day07.hs  Day08.hs  Day15.hs  Day18.hs  Day19.hs  Day20.hs  Year.hs
2022/src/: Day01.hs  Day02.hs  Day03.hs  Day05.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Year.hs
2023/src/: Day01.hs  Year.hs
aoc-hs/: .gitignore  aoc.cabal
aoc-hs/2021/: Day04.hs  Day14.hs  Day16.hs  Day19.hs  Year.hs
aoc-hs/2022/: Day02.hs  Day03.hs  Day04.hs  Day06.hs  Day07.hs  Day14.hs  Day15.hs  Day19 copy 2.hs  Day19 copy.hs  Day25.hs  Year.hs
aoc-hs/2023/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Year.hs
aoc-hs/base/: Main.hs
app/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  DayProblem.hs  Main.hs
base/: DayProblem.hs  Main.hs
