cabal-version:      2.4
name:               aoc
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Svein Atle Arnesen
maintainer:         sveinatle@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable aoc2021
    main-is:          Main.hs
    other-modules:    Year DayProblem Day01 Day02 Day03 Day04 Day05 Day06 Day07 Day08 Day09 Day10 Day11 Day12 Day13 Day14 Day15 Day16 Day17 Day18 Day19 Day20

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        aoc,
        split ^>=0.2.3,
        containers,
        pqueue,
        vector,
        unordered-containers,
        monad-loops,
        regex-compat

    hs-source-dirs:   base 2021/src
    default-language: Haskell2010

executable aoc2022
    main-is:          Main.hs
    other-modules:    Year DayProblem Day01 Day02 Day03 Day04 Day05 Day06 Day07 Day08 Day09 Day10 Day11 Day12 Day13 Day14 Day15 Day16 Day17 Day18 Day19 Day20 Day21 Day22

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        aoc,
        split ^>=0.2.3,
        containers,
        pqueue,
        vector,
        unordered-containers,
        monad-loops,
        regex-compat

    hs-source-dirs:   base 2022/src
    default-language: Haskell2010
